BUGFIX: Fix for Fast Resume with Chinese torrents: Bug #878015 [Parg]
BUGFIX: Fix for excess thread creation when tracker does not support single-infohash scrapes [Nolar]
BUGFIX: Fix for hash checking 0-byte files: Bug #853126 [Nolar]
BUGFIX: Fix for opening files via Files tab when using MoveOnComplete: Bugs #860822, #878795 [Nolar] 



19.12.03 | Azureus 2.0.6.0

FEATURE: Intelligent Tracker Checking: optimizes tracker re-ask interval for quicker download speed ramp up [Nolar]
FEATURE: Azureus can now run all downloads off one shared incoming port: only need to open/forward one port in your firewall/NAT [Parg]
FEATURE: Drag-n-Drop moving of downloads in MyTorrents; moving of downloads in MyTorrents with Ctrl + Arrow-Up/Down [Rele]
FEATURE: Password protected access to tracker web and torrents [Parg]
FEATURE: GUI Update interval is configurable [Gudy]
FEATURE: Images update interval is configurable [Gudy]
FEATURE: Auto sort on tables possible, interval configurable [Gudy]
FEATURE: MyTorrents view can now be customized (choice of columns and order) [Gudy]
FEATURE: Added new columns to MyTorrents : 'Share Ratio', 'Downloaded', 'Uploaded', 'Health' [Gudy]
FEATURE: Details view can now be customized (choice of columns and order) [Gudy]
FEATURE: SSL now supported for tracker web and tracker updates [Parg]
FEATURE: Added Drag and Drop of URLs [Rele]
FEATURE: Multi-Trackers torrents can now be created/edited [Gudy]
FEATURE: Menu option to force a re-check of downloaded data [Nolar]
FEATURE: End-Game Mode: Completes the last few pieces of a download faster [Gudy]
FEATURE: Attempts to download the very beginning of a file first - to support previewing [Nolar]
FEATURE: IPFiltering stats shown in status bar [Gudy]
FEATURE: Toolbar! [Gudy]
FEATURE: Logging of console output to disk [Parg]
FEATURE: Option to confirm on exit [Rele]
FEATURE: Bad Peer Detection [Gudy]
FEATURE: Inclusion of XSL stylesheed tag in stats XML file [Parg]